<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.platinebuilder.SolutionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/show_all"
                android:background="@color/colorAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all" />

            <Button
                android:id="@+id/rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorRule"
                android:text="@string/rule" />

            <TextView
                android:id="@+id/ruleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule_text"
                android:visibility="gone"
                android:background="@color/colorText" />

            <Button
                android:id="@+id/gui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorGUI"
                android:text="@string/gui_text" />

            <TextView
                android:id="@+id/gui_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gui_help_text"
                android:background="@color/colorText"
                android:visibility="gone" />

            <Button
                android:id="@+id/level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level1" />

            <ImageView
                android:id="@+id/level1_im"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/level1"
                android:visibility="gone" />

            <Button
                android:id="@+id/level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level2" />

            <ImageView
                android:id="@+id/level2_im"
                android:src="@drawable/level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level3" />

            <ImageView
                android:id="@+id/level3_im"
                android:src="@drawable/level3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level4" />

            <ImageView
                android:id="@+id/level4_im"
                android:src="@drawable/level4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level5" />

            <ImageView
                android:id="@+id/level5_im"
                android:src="@drawable/level5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level6" />

            <ImageView
                android:id="@+id/level6_im"
                android:src="@drawable/level6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level7" />

            <ImageView
                android:id="@+id/level7_im"
                android:src="@drawable/level7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level8" />

            <ImageView
                android:id="@+id/level8_im"
                android:src="@drawable/level8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level9" />

            <ImageView
                android:id="@+id/level9_im"
                android:src="@drawable/level9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level10" />

            <ImageView
                android:id="@+id/level10_im"
                android:src="@drawable/level10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/level11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level11" />

            <ImageView
                android:id="@+id/level11_im"
                android:src="@drawable/level11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
