<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:textColor="@color/colorRule"
        android:text="@string/hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/dropdown"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></Spinner>

        <Button
            android:id="@+id/load"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/load" />
    </LinearLayout>

    <GridView
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/gridview"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:columnWidth="50dp"
        android:gravity="center"
        android:numColumns="5"
        android:stretchMode="none"
        android:horizontalSpacing="4dp"
        android:verticalSpacing="4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/connectB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <Button
            android:id="@+id/removeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove" />

        <Button
            android:id="@+id/winB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win" />
    </LinearLayout>

</LinearLayout>
